Use networkx and add links in config

--- a/Project 4/utils/config.json
+++ b/Project 4/utils/config.json
@@ -1,24 +1,44 @@
 {
-    "1": [
-        "00:00:00:00:00:03",
-        "00:00:00:00:00:06",
-        "00:00:00:00:00:09",
-        "00:00:00:00:00:0c",
-        "00:00:00:00:00:0f"
-    ],
-    "2": [
-        "00:00:00:00:00:01",
-        "00:00:00:00:00:04",
-        "00:00:00:00:00:07",
-        "00:00:00:00:00:0a",
-        "00:00:00:00:00:0d",
-        "00:00:00:00:00:10"
-    ],
-    "3": [
-        "00:00:00:00:00:02",
-        "00:00:00:00:00:05",
-        "00:00:00:00:00:08",
-        "00:00:00:00:00:0b",
-        "00:00:00:00:00:0e"
-    ]
+    "groups": {
+        "1": [
+            "00:00:00:00:00:03",
+            "00:00:00:00:00:06",
+            "00:00:00:00:00:09",
+            "00:00:00:00:00:0c",
+            "00:00:00:00:00:0f"
+        ],
+        "2": [
+            "00:00:00:00:00:01",
+            "00:00:00:00:00:04",
+            "00:00:00:00:00:07",
+            "00:00:00:00:00:0a",
+            "00:00:00:00:00:0d",
+            "00:00:00:00:00:10"
+        ],
+        "3": [
+            "00:00:00:00:00:02",
+            "00:00:00:00:00:05",
+            "00:00:00:00:00:08",
+            "00:00:00:00:00:0b",
+            "00:00:00:00:00:0e"
+        ]
+    },
+    "links": {
+        "00:00:00:00:00:01": "4",
+        "00:00:00:00:00:02": "4",
+        "00:00:00:00:00:03": "5",
+        "00:00:00:00:00:04": "5",
+        "00:00:00:00:00:05": "7",
+        "00:00:00:00:00:06": "7",
+        "00:00:00:00:00:07": "8",
+        "00:00:00:00:00:08": "8",
+        "00:00:00:00:00:09": "11",
+        "00:00:00:00:00:0a": "11",
+        "00:00:00:00:00:0b": "12",
+        "00:00:00:00:00:0c": "12",
+        "00:00:00:00:00:0d": "14",
+        "00:00:00:00:00:0e": "14",
+        "00:00:00:00:00:0f": "15",
+        "00:00:00:00:00:10": "15"
+    }
 }
