Use integer port

--- a/Project 4/utils/config.json
+++ b/Project 4/utils/config.json
@@ -24,21 +24,69 @@
         ]
     },
     "links": {
-        "00:00:00:00:00:01": "4",
-        "00:00:00:00:00:02": "4",
-        "00:00:00:00:00:03": "5",
-        "00:00:00:00:00:04": "5",
-        "00:00:00:00:00:05": "7",
-        "00:00:00:00:00:06": "7",
-        "00:00:00:00:00:07": "8",
-        "00:00:00:00:00:08": "8",
-        "00:00:00:00:00:09": "11",
-        "00:00:00:00:00:0a": "11",
-        "00:00:00:00:00:0b": "12",
-        "00:00:00:00:00:0c": "12",
-        "00:00:00:00:00:0d": "14",
-        "00:00:00:00:00:0e": "14",
-        "00:00:00:00:00:0f": "15",
-        "00:00:00:00:00:10": "15"
+        "00:00:00:00:00:01": {
+            "switch_id": "4",
+            "port": 1
+        },
+        "00:00:00:00:00:02": {
+            "switch_id": "4",
+            "port": 2
+        },
+        "00:00:00:00:00:03": {
+            "switch_id": "5",
+            "port": 1
+        },
+        "00:00:00:00:00:04": {
+            "switch_id": "5",
+            "port": 2
+        },
+        "00:00:00:00:00:05": {
+            "switch_id": "7",
+            "port": 1
+        },
+        "00:00:00:00:00:06": {
+            "switch_id": "7",
+            "port": 2
+        },
+        "00:00:00:00:00:07": {
+            "switch_id": "8",
+            "port": 1
+        },
+        "00:00:00:00:00:08": {
+            "switch_id": "8",
+            "port": 2
+        },
+        "00:00:00:00:00:09": {
+            "switch_id": "11",
+            "port": 1
+        },
+        "00:00:00:00:00:0a": {
+            "switch_id": "11",
+            "port": 2
+        },
+        "00:00:00:00:00:0b": {
+            "switch_id": "12",
+            "port": 1
+        },
+        "00:00:00:00:00:0c": {
+            "switch_id": "4",
+            "port": 2
+        },
+        "00:00:00:00:00:0d": {
+            "switch_id": "14",
+            "port": 1
+        },
+        "00:00:00:00:00:0e": {
+            "switch_id": "14",
+            "port": 2
+        },
+        "00:00:00:00:00:0f": {
+            "switch_id": "15",
+            "port": 1
+        },
+        "00:00:00:00:00:10": {
+            "switch_id": "15",
+            "port": 2
+        }
     }
 }
